--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,9 +36,9 @@ CPMAddPackage(
 
 # ---- Create binary ----
 
-file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+file(GLOB sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/**/*.cpp")
 add_executable(SortnetTests ${sources})
-target_link_libraries(SortnetTests doctest Sortnet)
+target_link_libraries(SortnetTests Sortnet doctest)
 
 set_target_properties(SortnetTests PROPERTIES CXX_STANDARD 20)
 
