WIP - app runs...

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,6 +8,7 @@ project(SortnetApp
 
 include(../cmake/CPM.cmake)
 
+
 CPMAddPackage(
   NAME cxxopts
   GITHUB_REPOSITORY jarro2783/cxxopts
@@ -50,8 +51,8 @@ add_executable(SortnetApp ${headers} ${sources})
 set_target_properties(SortnetApp PROPERTIES
   CXX_STANDARD 20
   COMPILE_FLAGS "-Wall -pedantic -Wextra -D_GLIBCXX_ASSERTIONS -Wno-sign-compare -Wno-narrowing -fconcepts"
-  OUTPUT_NAME "Sortnet"
-)
+  OUTPUT_NAME "SortnetApp"
+) #  -fsanitize=undefined
 
 # enable compiler warnings
 if (NOT TEST_INSTALLED_VERSION)
