--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v1
     
     - name: configure
-      run: cmake -Htest -Bbuild
+      run: CXX=g++-9 cmake -Htest -Bbuild
 
     - name: build
-      run: cmake --build build --config Debug -j4
+      run: CXX=g++-9 cmake --build build --config Debug -j4
 
     - name: test
       run: |
