--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -7,21 +7,19 @@ env:
   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 jobs:
+
   build:
 
-    runs-on: ubuntu-18.10
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v1
     
     - name: configure
-      run: cmake -Htest -Bbuild -DENABLE_TEST_COVERAGE=1
-
-    - name: version
-      run: gcc --version
+      run: CXX=g++-9 cmake -Htest -Bbuild -DENABLE_TEST_COVERAGE=1
 
     - name: build
-      run: cmake --build build --config Debug -j4
+      run: CXX=g++-9 cmake --build build --config Debug -j4
 
     - name: test
       run: |
@@ -29,4 +27,4 @@ jobs:
         ctest --build-config Debug
 
     - name: collect code coverage
-      run: bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+      run: bash <(curl -s https://codecov.io/bash) -x gcov-9 || echo "Codecov did not collect coverage reports"
