--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -17,4 +17,4 @@ jobs:
       run: CXX=g++-9 cmake --build build -j4
 
     - name: run
-      run: ./build/SortnetApp
+      run: ./build/SortnetApp --info
