strip code from andersfylling/sortnet-gnp and simplify it (#2)
* WIP

* working permutation tests

* add test for set

* fix cpp linker errors (thanks to github.com/TheLartians)

* WIP

* fmt

* WIP

* patches list copy bug

* patch k calculation in permutation + fmt

* ci insight

* gcc 9 workflow

* fix app naming

* display info and dont run the calculations in app at CI

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
 project(SortnetApp
   LANGUAGES CXX
@@ -7,6 +7,7 @@ project(SortnetApp
 # ---- Dependencies ----
 
 include(../cmake/CPM.cmake)
+
 
 CPMAddPackage(
   NAME cxxopts
@@ -18,6 +19,24 @@ CPMAddPackage(
 )
 
 CPMAddPackage(
+  NAME tabulate
+  GITHUB_REPOSITORY p-ranav/tabulate
+  GIT_TAG origin/master
+)
+
+CPMAddPackage(
+  NAME progresscpp
+  GITHUB_REPOSITORY andersfylling/progress-cpp
+  GIT_TAG origin/master
+)
+
+CPMAddPackage(
+  NAME libpopcnt
+  GITHUB_REPOSITORY kimwalisch/libpopcnt
+  VERSION 2.3
+)
+
+CPMAddPackage(
   NAME Sortnet
   SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..
 )
@@ -25,13 +44,24 @@ CPMAddPackage(
 # ---- Create standalone executable ----
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+FILE(GLOB headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h")
 
-add_executable(SortnetApp ${sources})
+add_executable(SortnetApp ${headers} ${sources})
 
 set_target_properties(SortnetApp PROPERTIES
   CXX_STANDARD 20
-  COMPILE_FLAGS "-Wall -pedantic -Wextra"
-  OUTPUT_NAME "Sortnet"
-)
+  COMPILE_FLAGS "-Wall -Wextra -Wno-sign-compare -Wno-narrowing -fconcepts"
+  OUTPUT_NAME "SortnetApp"
+) #  -fsanitize=undefined
 
-target_link_libraries(SortnetApp Sortnet cxxopts)
+# enable compiler warnings
+if (NOT TEST_INSTALLED_VERSION)
+    if (CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        target_compile_options(Sortnet PUBLIC -Wall -Wextra -Werror -fconcepts)
+    elseif(MSVC)
+        target_compile_options(Sortnet PUBLIC /W4 /WX)
+    endif()
+endif()
+
+
+target_link_libraries(SortnetApp Sortnet tabulate progresscpp cxxopts)
