--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -11,10 +11,10 @@ jobs:
     - uses: actions/checkout@v1
     
     - name: configure
-      run: cmake -Happ -Bbuild
+      run: CXX=g++-9 cmake -Happ -Bbuild
 
     - name: build
-      run: cmake --build build -j4
+      run: CXX=g++-9 cmake --build build -j4
 
     - name: run
-      run: ./build/Sortnet
+      run: ./build/SortnetApp --info
