cleanup include folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,10 +76,10 @@ find_package(Threads REQUIRED)
 # Note: globbing sources is considered bad practice as CMake's generators may not detect new files automatically.
 # Keep that in mind when changing files, or explicitly mention them here.
 FILE(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/**/**/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/**/*.h"
-        "${CMAKE_CURRENT_SOURCE_DIR}/include/sortnet/vendors/github.com/dabbertorres/ThreadPool/ThreadPool.h"
+        "app/src/vendors/github.com/dabbertorres/ThreadPool/ThreadPool.h"
         )
 FILE(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/**/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
-        "${CMAKE_CURRENT_SOURCE_DIR}/include/sortnet/vendors/github.com/dabbertorres/ThreadPool/ThreadPool.cpp"
+        "app/src/vendors/github.com/dabbertorres/ThreadPool/ThreadPool.cpp"
         )
 
 # ---- Create library ----
