--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -7,24 +7,17 @@ env:
   CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 jobs:
-
   build:
-
     runs-on: ubuntu-20.04
-    
     steps:
     - uses: actions/checkout@v1
-    
     - name: configure
-      run: CXX=clang++-11 cmake -Htest -Bbuild -DENABLE_TEST_COVERAGE=1
-
+      run: CXX=clang cmake -Htest -Bbuild -DENABLE_TEST_COVERAGE=1
     - name: build
-      run: CXX=clang++-11 cmake --build build --config Debug -j4
-
+      run: CXX=clang cmake --build build --config Debug -j4
     - name: test
       run: |
         cd build
         ctest --build-config Debug
-
     - name: collect code coverage
       run: bash <(curl -s https://codecov.io/bash) -x gcov-9 || echo "Codecov did not collect coverage reports"
